Ensure value statements and images are aligned across screen widths #2363

--- a/src/html-pages/home-page/render-as-html/_value-statements.scss
+++ b/src/html-pages/home-page/render-as-html/_value-statements.scss
@@ -22,9 +22,14 @@ $_value-statements-max-width: functions.px-to-rem(996px);
 }
 
 .home-page-value-statement {
-
   @include breakpoints.not-narrow() {
     display: flex;
+  }
+}
+
+.home-page-value-statement__copy {
+  @include breakpoints.not-narrow() {
+    width: 50ch;
   }
 }
 
